[metadata]
name = capacity
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Data types to describe capacity
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/capacity


[extras]
testing =
    pytest
    pytest-cov
    coveralls

[tool:pytest]
addopts = -ra -W error::DeprecationWarning
testpaths = tests
